---------------------------------------------------------------------------------------------------
Version: 0.0.88
Date: 26/01/2020
  Features:
    - Updated to Factorio version 0.18
  Bugfixes:
    - Deep Storages correctly appear inside the Information GUI
---------------------------------------------------------------------------------------------------
Version: 0.0.87
Date: 20/01/2020
  Gui:
    - Updated all numbers to more readable numbers
    - The Information GUI Button was moved to the top of the Main GUI
    - The Tootip GUI Button was moved to the top of the Main GUI
  Scripting:
    - The Combat Jet will watch is life even more
  Graphics:
    - Reworked the Dimensional Ore Icon transparency
---------------------------------------------------------------------------------------------------
Version: 0.0.86
Date: 19/01/2020
  Bugfixes:
    - Fixed a crash on Load when a Matter Printer request an Item or a Matter Serializer send an Item whill the targeted Inventory was removed (Third attempt)
---------------------------------------------------------------------------------------------------
Version: 0.0.85
Date: 19/01/2020
  Bugfixes:
    - Fixed a crash on Load when a Matter Printer request an Item or a Matter Serializer send an Item whill the targeted Inventory was removed (Second attempt)
---------------------------------------------------------------------------------------------------
Version: 0.0.84
Date: 19/01/2020
  Bugfixes:
    - Fixed a crash on Load when a Matter Printer request an Item or a Matter Serializer send an Item whill the targeted Inventory was removed
---------------------------------------------------------------------------------------------------
Version: 0.0.83
Date: 19/01/2020
  Scripting:
    - Added a maximum size for the Construction table (Avoid long Save/Load)
  Bugfixes:
    - Fixed a compatibility problem with Bob's Logistic Mod and the Temp Chest