@@ -376,7 +376,7 @@ function MF:updateShield(event)
 		-- Calcule the shield size --
 		local mfB = global.MF.ent.bounding_box
 		local size = (mfB.right_bottom.y - mfB.left_top.y) / 12
-		rendering.draw_animation{animation="mfShield", target={self.ent.position.x-0.25, self.ent.position.y-0.3}, tint={1,tint,tint}, time_to_live=2, x_scale=size, y_scale=size, surface=self.ent.surface}
+		rendering.draw_animation{animation="mfShield", target={self.ent.position.x-0.25, self.ent.position.y-0.3}, tint={1,tint,tint}, time_to_live=2, x_scale=size, y_scale=size, surface=self.ent.surface, render_layer=134}
 	end
 	-- Charge the Shield --
 	local chargeSpeed = 10
